deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: springboot
    app.kubernetes.io/instance: springboot
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: springboot
  name: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - image: 273725063969.dkr.ecr.us-west-2.amazonaws.com/springboot:latest
          imagePullPolicy: Always
          name: springboot
          ports:
            - containerPort: 8089
