service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: books-service
  namespace: default 
  labels:
    app: books2
    service: books-service
spec:
  type: LoadBalancer
  selector:
    app: books2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7000
