ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jboss-ingress
  annotations:
    USERS.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
                service:
                        name: book-service
                        port:
                                number: 8080
